--- a/static/css/calculator.css
+++ b/static/css/calculator.css
@@ -11,7 +11,7 @@ calculator
   background: linear-gradient(0deg, rgb(251, 255, 44), rgb(129, 174, 58));
   border-radius: 20px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-
+  font-family: "Michroma", sans-serif;
   width: 320px;
   padding: 20px;
 }
@@ -20,7 +20,27 @@ calculator
   padding-bottom: 5px;
 }
 
+.calc_result{
+  background: #FBFF2C;
+  border-radius: 8px;
+  border:none;
+  box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.25) inset;
+  -webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.25) inset;
+  -moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.25) inset;
+  padding: 10px 8px 0 8px;
+}
+
+#profit_result{
+  font-size: 20px;
+}
+.profit_info{
+  background-color: rgba(204,224,50, 0.8);
+  border-radius: 8px;
+  padding: 8px;
+}
+
 .calc_btn_sm{
+  background-color: rgba(245, 245, 245, 0.1);
   height: 30px;
   border-radius: 8px;
   min-width: 40px;
@@ -28,15 +48,11 @@ calculator
   padding: 4px 8px;
 }
 
-
 .calc_btn_sm p{
   font-family: "Michroma", sans-serif;
   font-size: 14px;
-  opacity: 1!important; /* Reset opacity for the h2 element */
-
 }
 .calc_details{
-  font-family: "Michroma", sans-serif;
   font-size: 14px;
 }
 
@@ -45,16 +61,13 @@ calculator
   border-radius: 8px;
   border:none;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
-  font-family: "Michroma", sans-serif;
   font-size: 20px;
-
   padding: 10px 0;
   width: 270px;
 }
 
 
 .btn_glass{
-  background-color: rgba(245, 245, 245, 0.1);
   border:none;
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.4);
 }
@@ -66,6 +79,7 @@ calculator
   box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.25) inset;
   -webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.25) inset;
   -moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.25) inset;
+  height: 48px;
 }
 
 .calc_input:focus{
@@ -75,3 +89,4 @@ calculator
   -webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.35) inset;
   -moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.35) inset;
 }
+
