--- a/static/css/calculator.css
+++ b/static/css/calculator.css
@@ -117,13 +117,17 @@ background-image: url('static/img/checked.svg');
 box-shadow: 0 4px 5px rgba(0, 0, 0, 0.4);
 }
 
+
+
 .form-switch .form-check-input {
   width: 3.5em;
-}
-.form-switch .form-check-input:focus {
-  background-image: url('static/img/checked.svg');
+
 }
 
+.form-switch .form-check-input:focus {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba%280, 0, 0, 0.25%29'/%3e%3c/svg%3e");
+}
+/*
 .form-check-input:checked {
   background-color: rgba(251, 255, 44, .5);
   border-color: rgba(251, 255, 44, .1) !important;
@@ -131,4 +135,4 @@ box-shadow: 0 4px 5px rgba(0, 0, 0, 0.4);
   box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.25) inset;
   -webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.25) inset;
   -moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.25) inset;
-}
+}*/
