--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -12,7 +12,7 @@
 }
 
 body{
-	background: var(--green);
+	background: var(--black);
 }
 
 
@@ -166,6 +166,10 @@ Various on devices
   padding-left: .7em;
   padding-right: .7em;
   padding-top: 1em;
+}
+.app_button{
+	height: 3.6em;
+	padding-top: 1em;
 }
 .copyright{
 	font-size: 14px;
