--- a/static/css/circles.css
+++ b/static/css/circles.css
@@ -16,7 +16,7 @@ circles
   border-radius: 50%;
   background: rgb(28, 28, 28);
   position: absolute;
-  animation: moveci_1_b_de 12s infinite;
+  animation: moveci_1_b_de 25s infinite;
 }
 
 .ci_1_y_de {
@@ -25,7 +25,7 @@ circles
   border-radius: 50%;
   background: linear-gradient(125deg, rgb(251, 255, 44), rgb(28, 28, 28));
   position: absolute;
-  animation: moveci_1_y_de 10s infinite;
+  animation: moveci_1_y_de 25s infinite;
 }
 
 .ci_1_g_de {
@@ -34,105 +34,129 @@ circles
   border-radius: 50%;
   background: linear-gradient(125deg, rgb(129, 174, 58), rgb(28, 28, 28));
   position: absolute;
-  animation: moveci_1_g_de 15s infinite;
+  animation: moveci_1_g_de 25s infinite;
 }
+
 
 @keyframes moveci_1_b_de {
   0% {
-    left: 10%;
-    top: 63%;
+    left: 50%;
+    top: 0%;
     width: 320px;
     height: 320px;
   }
-  25% {
-    left: 80%;
-    top: 0%;
-    width: 400px;
-    height: 400px;
-  }
-  50% {
-    left: 50%;
-    top: 30%;
-    width: 600px;
-    height: 600px;
-  }
-  75% {
-    left: 20%;
-    top: 5%;
-    width: 200px;
-    height: 200px;
-  }
-  100% {
-    left: 0%;
-    top: 0%;
+  20% {
+    left: 70%;
+    top: 40%;
     width: 100px;
     height: 100px;
+  }
+  40% {
+    left: 22%;
+    top: 22%;
+    width: 300px;
+    height: 300px;
+  }
+  60% {
+    left: 0%;
+    top: 15%;
+    width: 700px;
+    height: 700px;
+  }
+  80% {
+    left: 40%;
+    top: 0%;
+    width: 500px;
+    height: 500px;
+  }
+  100% {
+    left: 50%;
+    top: 0%;
+    width: 320px;
+    height: 320px;
   }
 }
 @keyframes moveci_1_y_de {
   0% {
-    left: 40%;
+    left: 50%;
     top: 5%;
     width: 850px;
     height: 850px;
   }
-  25% {
+  20% {
     left: 20%;
-    top: 20%;
-    width: 1000px;
-    height: 1000px;
-  }
-  50% {
-    left: 0%;
     top: 0%;
-    width: 900px;
-    height: 900px;
+    width: 300px;
+    height: 300px;
   }
-  75% {
-    left: 30%;
-    top: 10%;
-    width: 600px;
-    height: 600px;
+  40% {
+    left: -30%;
+    top: -10%;
+    width: 1100px;
+    height: 1100px;
+  }
+  60% {
+    left: 60%;
+    top: 30%;
+    width: 300px;
+    height: 300px;
+  }
+  80% {
+    left: 40%;
+    top: -5%;
+    width: 500px;
+    height: 500px;
   }
   100% {
     left: 50%;
-    top: 0%;
-    width: 700px;
-    height: 700px;
+    top: 5%;
+    width: 850px;
+    height: 850px;
   }
 }
 @keyframes moveci_1_g_de {
   0% {
     left: 10%;
     top: 0%;
-    width: 600px;
-    height: 600px;
-  }
-  25% {
-    left: 0%;
-    top: 10%;
     width: 200px;
     height: 200px;
   }
-  50% {
-    left: 20%;
-    top: 40%;
-    width: 100px;
-    height: 100px;
-  }
-  75% {
-    left: 50%;
-    top: 50%;
-    width: 500px;
-    height: 500px;
-  }
-  100% {
+  20% {
     left: 30%;
-    top: 0%;
+    top: 10%;
     width: 800px;
     height: 800px;
   }
+  40% {
+    left: 30%;
+    top: -30%;
+    width: 600px;
+    height: 600px;
+  }
+  60% {
+    left: -20%;
+    top: 0%;
+    width: 900px;
+    height: 900px;
+  }
+  80% {
+    left: -30%;
+    top: 0%;
+    width: 1000px;
+    height: 1000px;
+  }
+  100% {
+    left: 10%;
+    top: 0%;
+    width: 200px;
+    height: 200px;
+  }
 }
+
+
+
+
+
 
 
 
@@ -167,97 +191,115 @@ circles
 
 @keyframes moveci_1_b_mo {
   0% {
-    left: 50%;
-    top: 20%;
-    width: 120px;
-    height: 120px;
+    left: 7%;
+    top: 23%;
+    width: 250;
+    height: 250;
   }
-  25% {
-    left: 50%;
-    top: 20%;
-    width: 320px;
-    height: 320px;
-  }
-  50% {
-    left: -30%;
-    top: -30%;
-    width: 470px;
-    height: 470px;
-  }
-  75% {
+  20% {
     left: 0%;
-    top: 30%;
-    width: 150px;
-    height: 150px;
+    top: 25%;
+    width: 400px;
+    height: 400px;
+  }
+  40% {
+    left: 50%;
+    top: 20%;
+    width: 100px;
+    height: 100px;
+  }
+  60% {
+    left: -4%;
+    top: 25%;
+    width: 350px;
+    height: 350px;
+  }
+  80% {
+    left: 0%;
+    top: 10%;
+    width: 500px;
+    height: 500px;
   }
   100% {
-    left: 10%;
-    top: 10%;
-    width: 320px;
-    height: 320px;
+    left: 7%;
+    top: 23%;
+    width: 250px;
+    height: 250px;
   }
 }
 @keyframes moveci_1_y_mo {
   0% {
+    left: -20%;
+    top: -10%;
+    width: 600;
+    height: 600;
+  }
+  20% {
     left: -10%;
-    top: 0%;
-    width: 650px;
-    height: 650px;
+    top: 5%;
+    width: 200px;
+    height: 200px;
   }
-  25% {
-    left: 0%;
-    top: 20%;
-    width: 480px;
-    height: 480px;
-  }
-  50% {
-    left: 50%;
+  40% {
+    left: 60%;
     top: 40%;
-    width: 190px;
-    height: 190px;
+    width: 600px;
+    height: 600px;
   }
-  75% {
-    left: 70%;
-    top: 30%;
-    width: 350px;
-    height: 350px;
+  60% {
+    left: 10%;
+    top: 20%;
+    width: 400px;
+    height: 400px;
+  }
+  80% {
+    left: 0%;
+    top: -5%;
+    width: 300px;
+    height: 300px;
   }
   100% {
-    left: 0%;
-    top: 10%;
-    width: 650px;
-    height: 650px;
+    left: -20%;
+    top: -10%;
+    width: 600;
+    height: 600;
   }
 }
 @keyframes moveci_1_g_mo {
   0% {
-    left: -10%;
-    top: 20%;
-    width: 340px;
-    height: 340px;
+    left: 2%;
+    top: 80%;
+    width: 100;
+    height: 100;
   }
-  25% {
-    left: 70%;
-    top: 0%;
-    width: 250px;
-    height: 250px;
-  }
-  50% {
-    left: 0%;
-    top: -20%;
-    width: 480px;
-    height: 480px;
-  }
-  75% {
-    left: 20%;
+  20% {
+    left: 30%;
     top: 10%;
-    width: 450px;
-    height: 450px;
+    width: 600px;
+    height: 600px;
+  }
+  40% {
+    left: 20%;
+    top: 0%;
+    width: 200px;
+    height: 200px;
+  }
+  60% {
+    left: -20%;
+    top: 0%;
+    width: 800px;
+    height: 800px;
+  }
+  80% {
+    left: 20%;
+    top: 50%;
+    width: 500px;
+    height: 500px;
   }
   100% {
-    left: 0%;
-    top: 40%;
-    width: 260px;
-    height: 260px;
+    left: 2%;
+    top: 80%;
+    width: 100px;
+    height: 100px;
   }
 }
