--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -24,7 +24,7 @@ h1, h2, h3, h4, h5, h6,
 }
 
 
-p {
+p, li {
   font-family: "Bai Jamjuree", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -34,6 +34,12 @@ a{
 	text-decoration: none;
 }
 
+
+.clip_overflow_x{
+  overflow-x: clip!important;
+}
+
+
 /* COLORS */
 
 .black{
@@ -41,6 +47,10 @@ a{
 }
 .black_bg{
 	background-color: var(--black);
+}
+.black_bg_op{
+	background-color:var(--black);
+	opacity: .8;
 }
 .bordo{
 	color: var(--bordo);
@@ -92,7 +102,7 @@ Various on devices
 	h1{
 		font-size: 48px;
 	}
-	p{
+	p, li{
 		font-size: 24px;
 	}
 	.details{
@@ -105,6 +115,12 @@ Various on devices
 		height: 1072px;
 	}	
 
+	.mt_-26{
+		margin-top: -26em!important;
+	}
+	.mt_-34{
+		margin-top: -34em!important;
+	}
 }
 
 
@@ -116,7 +132,7 @@ Various on devices
 		width: 180px;
 		padding-top: 10px;
 	}
-	p{
+	p, li{
 		font-size: 20px;
 	}
 	h1{
@@ -131,6 +147,15 @@ Various on devices
 		color: var(--white_milk);
 		height: 850px;
 	}
+
+	.mt_-26{
+		margin-top: 0em;
+	}
+
+	.mt_-34{
+		margin-top: 0em;
+	}
+
 
 }
 
@@ -165,10 +190,6 @@ Various on devices
 	margin-top: -10em;
 }
 
-.mt_-26{
-	margin-top: -26em;
-}
-
 .mt_10{
 	margin-top: 10em;
 }
@@ -199,6 +220,7 @@ Various on devices
 
 .nav-link{
 	color:var(--white_milk);
+	font-size: 20px;
 }
 .nav-link:hover{
 	color:var(--green);
@@ -243,6 +265,7 @@ Various on devices
 	height: 3.6em;
 }
 
+
 .block_product{
 	width:86%;
 	margin-left: auto;
@@ -257,12 +280,21 @@ Various on devices
 }
 
 .tariff_card{
-  width: 14em;
+  min-width: 10em;
+  max-width: 14em;
   height: 20em;
   padding: 12px;
 }
 .tariff_card_img{
 	height: 10.75em;
+}
+.about_card_img{
+	height: 12em;
+}
+.team_card_img{
+	height: 16em;
+	margin-left: auto;
+	margin-right: auto;
 }
 .block{
 	height: 970px;
