--- a/static/css/calculator.css
+++ b/static/css/calculator.css
@@ -12,10 +12,11 @@ calculator
   border-radius: 20px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   font-family: "Michroma", sans-serif;
-  width: 320px;
+  max-width: 320px;
+  min-width: 300px;
   padding: 20px;
-  margin-left: auto;
-  margin-right: auto;
+/*  margin-left: auto;
+  margin-right: auto;*/
 }
 .calc_h4{
   font-size: 20px;
@@ -49,15 +50,17 @@ calculator
   margin: 8px 0;
   padding: 4px 8px;
 }
-.calc_btn_sm:focus{
+.calc_btn_sm:hover{
   background-color: rgba(251, 255, 44, .3);
+}
+.calc_btn_clicked{
+  background-color: rgba(251, 255, 44, .5);
 }
 
 .calc_btn_sm p{
   font-family: "Michroma", sans-serif;
   font-size: 14px;
 }
-
 
 
 
