--- a/static/css/calculator.css
+++ b/static/css/calculator.css
@@ -12,15 +12,15 @@ calculator
   border-radius: 20px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   font-family: "Michroma", sans-serif;
-  max-width: 320px;
-  min-width: 300px;
-  padding: 20px;
-/*  margin-left: auto;
-  margin-right: auto;*/
+  max-width: 20em;
+  min-width: 18.75em;
+  padding: 1.25em;
+  margin-left: auto!important;
+  margin-right: auto!important;
 }
 .calc_h4{
   font-size: 20px;
-  padding-bottom: 5px;
+  padding-bottom: 0.3125em;
 }
 
 .calc_result{
@@ -44,9 +44,9 @@ calculator
 
 .calc_btn_sm{
   background-color: rgba(245, 245, 245, 0.1);
-  height: 30px;
+  height: 1.875em;
   border-radius: 8px;
-  min-width: 40px;
+  min-width: 2.5em;
   margin: 8px 0;
   padding: 4px 8px;
 }
@@ -75,8 +75,7 @@ calculator
   border:none;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
   font-size: 20px;
-  padding: 10px 0;
-  width: 270px;
+  padding: 10px 20px;
 }
 
 
@@ -93,7 +92,7 @@ calculator
   box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.25) inset;
   -webkit-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.25) inset;
   -moz-box-shadow: 0px 4px 5px 0px rgba(0,0,0,0.25) inset;
-  height: 48px;
+  height: 3em;
 }
 
 .calc_input:focus{
